--- a/css/general.css
+++ b/css/general.css
@@ -19,9 +19,58 @@ html {
 	text-size-adjust: 100%;
     
     font-size: 100%;
+    font-family:Calibri, Helvetica, sans-serif
 }
 
 img {
 	width: 100%;
     display: block;
 }
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.masthead {
+    background-color: black;
+    overflow: hidden;
+}
+
+.logo {
+    height: 3rem;
+    width: auto;
+    margin: 0.75rem;
+    float: right;
+}
+
+h1 {
+    margin: 1.5rem;
+    font size: 20rem;
+    line-height: 6rem;
+    font-family: didot, calisto MT, serif;
+    font-size: 600%;
+}
+
+    
+h2 {
+    margin: 1.5rem .5;
+    font size: 2rem;
+    font-size: 80%;
+    line-height: 1.25rem;
+    font-family: Didot, Calisto MT, serif;
+}
+
+h3 {
+    margin: 3rem 5;
+    text-indent: 60px;
+    font size: 2rem;
+    font-size: 60%;
+    line-height: 2rem;
+    font-family: Didot, Calisto MT, serif;
+}
+
+p {
+    line-height: 1.5rem;
+    margin: 0 0 1.5rem;
+    }
