--- a/css/general.css
+++ b/css/general.css
@@ -19,7 +19,7 @@ html {
 	text-size-adjust: 100%;
     
     font-size: 100%;
-    font-family:Calibri, Helvetica, sans-serif
+    font-family: Trebuchet MS, Helvetica, sans-serif
 }
 
 img {
@@ -52,7 +52,6 @@ h1 {
     font-size: 600%;
 }
 
-    
 h2 {
     margin: 1.5rem .5;
     font size: 2rem;
@@ -61,16 +60,22 @@ h2 {
     font-family: Didot, Calisto MT, serif;
 }
 
-h3 {
-    margin: 3rem 5;
-    text-indent: 60px;
-    font size: 2rem;
-    font-size: 60%;
-    line-height: 2rem;
-    font-family: Didot, Calisto MT, serif;
-}
-
 p {
     line-height: 1.5rem;
     margin: 0 0 1.5rem;
+    font-family: Trebuchet MS, Helvetica, sans-serif;
+    font-style:normal;
     }
+
+figure {
+    margin: 0 auto 2rem;
+    width: 80%;
+    border: black;
+} 
+
+figcaption {
+    font-size: .75rem;
+    margin: 0 auto;
+    font-family: didot, calisto MT, serif;
+    float:right;
+} 
