--- a/css/general.css
+++ b/css/general.css
@@ -70,7 +70,6 @@ p {
 figure {
     margin: 0 auto 2rem;
     width: 80%;
-    border: black;
 } 
 
 figcaption {
@@ -78,4 +77,17 @@ figcaption {
     margin: 0 auto;
     font-family: didot, calisto MT, serif;
     float:right;
+} 
+
+footer {
+    background-color: black;
+    overflow: hidden;
+}
+
+footer p {
+    color: white;
+    margin: .5rem 4rem;
+    font-size: .75rem;
+    line-height: 1.25rem;
+    font-family: trebuchet ms, helvetica, sans-serif;
 } 
