--- a/css/general.css
+++ b/css/general.css
@@ -41,7 +41,7 @@ body {
     height: 3rem;
     width: auto;
     margin: 0.75rem;
-    float: right;
+    float: left;
 }
 
 h1 {
@@ -58,6 +58,12 @@ h2 {
     font-size: 80%;
     line-height: 1.25rem;
     font-family: Didot, Calisto MT, serif;
+}
+
+h1 + p { line-height: 1.5rem;
+    margin: 0 0 1.5rem;
+    font-family: Trebuchet MS, Helvetica, sans-serif;
+    font-style:oblique;
 }
 
 p {
@@ -91,3 +97,11 @@ footer p {
     line-height: 1.25rem;
     font-family: trebuchet ms, helvetica, sans-serif;
 } 
+
+.silver {
+    font-family: trebuchet ms, helvetica, sans-serif;
+    color: #969590; 
+    text-align:center;
+    font-size: 1rem;
+    line-height: 1.5rem;
+}
